# Pacman-3D-version

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
include/: camera.h  config.h  food.h  game.h  ghost.h  level.h  model.h  route_planner.h  shader.h  text_renderer.h  texture.h  util.h
resources/levels/: level0
resources/shaders/: fragment.frag  text.frag  text.vert  vertex.vert
src/: food.cpp  game.cpp  ghost.cpp  level.cpp  main.cpp
src/ai/: route_planner.cpp
src/imgui/: imconfig.h
src/rendering/: model.cpp  text_renderer.cpp  texture.cpp
